--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "happy-birthday-girlfriend",
+  "name": "kisgirl-bday",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://szentebalint.github.io/birtday/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.6",
@@ -27,6 +29,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
